# studio-disponibility

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  renovate.json
.github/workflows/: build-and-release.yaml  test.yaml
app/: main.py  models.py  quickstudioapi.py  sql.py  utils.py
src/studio_availability/: __init__.py
templates/: availabilities.html  index.html  item.html
