[project]
name = "studio-availability"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Julen Dixneuf", email = "julend@padok.fr" }
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.25.0",
    "jinja2>=3.1.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.12.1",
    "ruff>=0.1.13",
    "isort>=5.13.2",
    "pyright>=1.1.345",
]

[tool.hatch.metadata]
allow-direct-references = true
