[project]
name = "studio-availability"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Julen Dixneuf", email = "julen.dixneuf@gmail.com" },
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.25.0",
    "jinja2>=3.1.3",
    "httpx>=0.26.0",
    "cachetools>=5.3.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.uv]
dev-dependencies = [
    "ruff>=0.1.13",
    "pyright>=1.1.345",
]
